Expand Docker and Kubernetes module READMEs